Feature/pedidos sincronizados (#10)
* se guarda la direccion del usuario al hacer la compra, aparte de eso. Al finalizar la compra la vista de pedidos se actualiza para mostrar el nuevo pedido y el stock se actualiza.

* feat(pedidos): DTOs y servicios consistentes, subtotal calculado por BD, controllers limpios